Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3445

Specifying multiple networks in NIDs does no longer work

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.4.1, Lustre 2.5.0
    • Lustre 2.4.0
    • None
    • 3
    • 8593

      With older version of Lustre I was used to have IB as default network, but also to have a ethernet connection as fallback, so each NID specified for failover.node or mgs.node contained both networks, e.g.:

      failover.node=10.3.0.228@o2ib,192.168.50.128@tcp

      When I try this with 2.4.0 it appears the parser does not understand this syntax anymore. I get an error in syslog:

      LDISKFS-fs (dm-7): Unrecognized mount option "192.168.50.128@tcp" or missing value

            yujian Jian Yu
            omangold Oliver Mangold
            Votes:
            0 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: