LU-3445 utils: make add_param() handle comma-separated values

Current mkfs.lustre supports comma-separated values in "--mgsnode",
"--failnode", etc. options. However, in mount.lustre, the values
are directly passed to mount() as options without prefixing with
Lustre parameter key for each one. This will make the values can
not be recognized by the backend filesystem and cause mount.lustre
fail with -EINVAL error.

This patch improves add_param() to extract values from the comma-
separated string and prefix Lustre parameter key to each value.

Signed-off-by: Jian Yu <jian.yu@intel.com>
Change-Id: I64c5cb6f61277a93f65f69f63050721e0070c450